--- a/templates/index.html
+++ b/templates/index.html
@@ -114,6 +114,7 @@
     <div class='cta'>
       <button class='purchase_btn'>Purchase Your Tickets</button>
     </div>
+    {% csrf_token %}
     <script src="{% static 'script.js' %}"></script>
     <script src="{% static 'backend.js' %}"></script>
   </body>
